--- a/frontend/eventMate/package.json
+++ b/frontend/eventMate/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@tanstack/react-query": "^5.51.23",
     "axios": "^1.7.4",
+    "joi": "^17.13.3",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
